--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: clahub_development
   pool: 5
-  username:
+  username: Dan
   password:
 
 test:
@@ -19,5 +19,5 @@ production:
   encoding: unicode
   database: clahub_production
   pool: 5
-  username:
+  username: Dan
   password:
