Add GitHub App integration with webhook receiver (#206)
Install @octokit/app and create the GitHub App singleton with lazy
initialization, helper functions for app-level and installation-level
Octokit clients, webhook handlers for installation lifecycle events,
and a POST route at /api/webhooks/github for signature-verified dispatch.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@octokit/app": "^16.1.2",
     "@prisma/adapter-better-sqlite3": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "class-variance-authority": "^0.7.1",
