fix(ci): run DB setup in CI and use absolute DATABASE_URL
Playwright starts webServer before globalSetup, so the port-3000
check always skipped DB setup in CI. Use process.env.CI instead.
Also use an absolute DATABASE_URL path in the workflow to avoid
Prisma CLI vs adapter path resolution mismatches.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 env:
-  DATABASE_URL: "file:./test.db"
+  DATABASE_URL: "file:${{ github.workspace }}/test.db"
   NEXTAUTH_SECRET: "test-secret-that-is-at-least-32-characters-long"
   NEXT_PUBLIC_APP_URL: "http://localhost:3000"
   GITHUB_APP_ID: "999999"
