chore(config): add NEXT_PUBLIC_SENTRY_DSN and LOG_LEVEL to env example

--- a/.env.local.example
+++ b/.env.local.example
@@ -22,6 +22,8 @@ APP_URL="http://localhost:3000"
 
 # Monitoring (optional)
 SENTRY_DSN=""
+NEXT_PUBLIC_SENTRY_DSN=""
+LOG_LEVEL=""
 
 # Email (optional)
 RESEND_API_KEY=""
