chore(deps): add @react-pdf/renderer for PDF export

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@octokit/app": "^16.1.2",
     "@prisma/adapter-better-sqlite3": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@react-pdf/renderer": "^4.3.2",
     "@sentry/nextjs": "^10.38.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
