feat(a11y): add WCAG 2.1 AA accessibility improvements
- Add skip navigation link and main landmark (id="main-content") to all layouts
- Add aria-expanded/aria-controls to mobile nav toggle in site-header
- Add proper h1 headings and role="alert" to error/not-found pages
- Add ARIA combobox/listbox roles to autocomplete dropdowns
- Add print stylesheet hiding nav/header/footer
- Add axe-core Playwright E2E accessibility tests
- Install @axe-core/playwright for automated a11y auditing

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.23"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
