feat(docker): add Dockerfile and compose for self-hosted deployment
Multi-stage build (deps -> builder -> Alpine runner) with non-root user.
Entrypoint validates DATABASE_URL, ensures SQLite directory, and runs
prisma db push on startup. Includes compose file with volume mount and
healthcheck, plus Docker-specific env template.

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,5 +1,5 @@
-# Database
-DATABASE_URL="file:./clahub.db"
+# Database (managed by Docker — typically no change needed)
+DATABASE_URL="file:/app/data/clahub.db"
 
 # Auth.js
 NEXTAUTH_SECRET=""
@@ -18,18 +18,18 @@ GITHUB_CONTRIBUTOR_CLIENT_ID=""
 GITHUB_CONTRIBUTOR_CLIENT_SECRET=""
 
 # Application
-APP_URL="http://localhost:3000"
-
-# Monitoring (optional)
-SENTRY_DSN=""
-NEXT_PUBLIC_SENTRY_DSN=""
-LOG_LEVEL=""
+APP_URL="https://cla.example.com"
 
 # Branding (optional — customize your instance)
 # APP_NAME="MyCLA"
 # APP_LOGO_URL="https://example.com/logo.png"
 # APP_PRIMARY_COLOR="#0066cc"
 
+# Monitoring (optional)
+# SENTRY_DSN=""
+# NEXT_PUBLIC_SENTRY_DSN=""
+# LOG_LEVEL=""
+
 # Email (optional)
-RESEND_API_KEY=""
-EMAIL_FROM="noreply@clahub.com"
+# RESEND_API_KEY=""
+# EMAIL_FROM="noreply@example.com"
